<resources>
    <string name="app_name">Road Lighting</string>
    <string name="title_activity_maps">RoadLighting</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoibW9oYW1hZHA5MSIsImEiOiJjbDJucjJiYngwem9hM2JtdWM0OHJ5eDhmIn0.XjTLL8-d9uOeIPpPIs9EtQ</string>
    <string name="no_data">There is no data !!</string>
    <string name="default_lightposts_text">This path has x lightpost …</string>
    <string name="no_data_found">NO DATA FOUND !!!</string>
    <string name="guide_user_to_add_data">Click on the below button</string>
    <string name="second_guide_user_to_add_data">* Register a new lightpost</string>
    <string name="third_guide_user_to_add_data">* Choose an excel file contains lightposts data</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="do_you_have_the_required_permissions">Do you have the right access ?</string>
    <string name="id">Id</string>
    <string name="from">From</string>
    <string name="road_info">Road Info</string>
    <string name="to">To</string>
    <string name="width">Width</string>
    <string name="distance">Distance Between LightPosts</string>
    <string name="cable_connection">Cable connection</string>
    <string name="lightpost_info">LightPost Info</string>
    <string name="sides" translatable="false">Sides</string>
    <string name="height">Height</string>
    <string name="power">Power</string>
    <string name="status">Status</string>
    <string name="cause_of_failure">Cause Of Failure</string>
    <string name="contracting_company">Contracting Company</string>
    <string name="costs">Costs</string>
    <string name="on">On</string>
    <string name="Two">Two</string>
    <string name="submit">Submit</string>
    <string name="light_production">Light production</string>
    <string name="Top">Top</string>
    <string name="check">Check</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="verify_code">Verification Code</string>
    <string name="verify_password">Verify password</string>
    <string name="enter_password">Enter password</string>
    <string-array name="sides">
        <item>One</item>
        <item>Two</item>
    </string-array>

    <string-array name="cable_connection">
        <item>Top</item>
        <item>Bottom</item>
    </string-array>

    <string-array name="status">
        <item>On</item>
        <item>Off</item>
        <item>Maintenance</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="language">language</string>
    <string name="public_header">public</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="open_files">Open Files</string>
    <string name="home">Home</string>
</resources>