<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/window_background">

    <View
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/wave"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close_dialog"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/primary"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="@id/wave"
        app:layout_constraintTop_toTopOf="@id/wave"
        app:tint="@android:color/white" />

    <Button
        android:id="@+id/login_btn_dialog"
        style="@style/Theme.RoadMaintenance.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/user_password"
        app:layout_constraintRight_toRightOf="@+id/user_password"
        app:layout_constraintTop_toBottomOf="@+id/remember_me_login_dialog" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_password"
        style="@style/MaterialTextField"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/Password"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@android:color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_me_login_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/secondary"
        android:text="@string/remember_me"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/user_password"
        app:layout_constraintTop_toBottomOf="@id/user_password" />

    <TextView
        style="@style/NormalText"
        android:id="@+id/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="@id/close_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>