<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/sh_profile_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person"
            app:tint="@android:color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/topText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="Verify your account"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@id/top_layout" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/secondary"
        android:text="@string/remember_me"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/verification_code"
        app:layout_constraintTop_toBottomOf="@id/verification_code" />

    <Button
        android:id="@+id/login_btn"
        style="@style/Theme.RoadMaintenance.PrimaryButton"
        android:layout_width="310dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="@+id/remember_me"
        app:layout_constraintTop_toBottomOf="@+id/remember_me" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        style="@style/MaterialTextField"
        app:errorEnabled="true"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/Password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave"
        app:passwordToggleTint="@color/primary_dark"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_verify"
        style="@style/MaterialTextField"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginTop="8dp"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        app:passwordToggleTint="@color/primary_dark"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verification_code"
        style="@style/MaterialTextField"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/verify_code"
        android:textSize="18sp"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/password_verify"
        app:layout_constraintTop_toBottomOf="@+id/password_verify"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberSigned"
            android:textColor="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>