<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".fragments.login.CheckUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/sh_profile_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person"
            app:tint="@android:color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/topText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/do_you_have_the_required_permissions"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@id/top_layout" />

    <Button
        android:id="@+id/checkUser"
        style="@style/Theme.RoadMaintenance.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/check"
        app:layout_constraintLeft_toLeftOf="@+id/user_id"
        app:layout_constraintRight_toRightOf="@+id/user_id"
        app:layout_constraintTop_toBottomOf="@+id/user_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_id"
        style="@style/MaterialTextField"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/email_or_phone"
        android:textSize="18sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>